# STM32H743XIH6

./: README.md  STM32H743基本环境开发.txt
Project/: N_OS_Project.uvguix.lenovo  N_OS_Project.uvoptx  N_OS_Project.uvprojx  README.md
Project - 副本/: CMakeLists.txt  N_OS_Project.uvguix.lenovo  N_OS_Project.uvoptx
Project - 副本/Drivers/Inc/: CAN.h  GPIO_AF.h  II2.h
Project - 副本/FATFS/Src/: diskio.c
Project - 副本/Listings/: N_OS_Project.map  startup_stm32h743xx.lst
Project - 副本/Src/App/: main.c
Project/.eide/: eide.json  env.ini
Project/Application/Main/: main.c  main.h
Project/CMSIS/: stm32h7xx.h
Project/CMSIS/Core/: mpu_armv7.h
Project/CMSIS/Device/: register.h
Project/Drivers/Inc/: FATFS.h  SPI.h
Project/Drivers/Src/: CAN.c  GPIO_AF.c  SPI.c
Project/Listings/: startup_stm32h743xx.lst
Project/Middlewares/FATFS/Inc/: ffconf.h
Project/Middlewares/FATFS/Src/: diskio.c
Project_cmake_trial/: CMakeCache.txt  CMakeLists.txt  Makefile  N_OS_Project.uvguix.lenovo  N_OS_Project.uvoptx  N_OS_Project.uvprojx  clean_cmake.sh  cmake_install.cmake
Project_cmake_trial/CMSIS/Clock/: clock_manage.c  clock_manage.h
Project_cmake_trial/Docs/: 具体配置.txt
Project_cmake_trial/Drivers/Inc/: OLED.h  PWM.h  SDCard.h  USART.h
Project_cmake_trial/Drivers/Src/: II2.c  SPI.c  USART.c
Project_cmake_trial/Include/App/: main.h
communication proctical learning/: SPI.md
参考资料/彩色液晶 - 2.00寸SPI接口（型号SPI200M1-240x320）/1.封装库/: SPI200M1-240x320屏幕模块-原理图库.SchLib  零散元件库.SCHLIB
参考资料/彩色液晶 - 2.00寸SPI接口（型号SPI200M1-240x320）/1.封装库/立创EDA/: SPI200M1-240x320屏幕模块-原理图库.json  (+1 more)
(+2 files in other folders)
